--- a/work/planAhead/16wtf/16wtf.runs/impl_1/.bitgen.begin.rst
+++ b/work/planAhead/16wtf/16wtf.runs/impl_1/.bitgen.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="bitgen" Owner="xiaomeng_wu" Host="DESKTOP-AS6ELA8" Pid="1692">
+    <Process Command="bitgen" Owner="wanzh" Host="DESKTOP-MKI0O6B" Pid="14572">
     </Process>
 </ProcessHandle>
