--- a/work/planAhead/16wtf/16wtf.runs/synth_1/.xst.begin.rst
+++ b/work/planAhead/16wtf/16wtf.runs/synth_1/.xst.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="xst" Owner="xiaomeng_wu" Host="DESKTOP-AS6ELA8" Pid="5448">
+    <Process Command="xst" Owner="wanzh" Host="DESKTOP-MKI0O6B" Pid="25288">
     </Process>
 </ProcessHandle>
